# dp-verify-repair

./: .gitignore  API.md  README.md  pyproject.toml
benchmarks/: __init__.py  benchmark_runner.py  bug_catalog.py  profile_analysis.py  tier1_basic.py  tier2_composition.py  tier2_incremental.py  tier3_repair.py  tier4_stress.py
docs/: tool_paper.aux  tool_paper.out  tool_paper.tex
dp_cegar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dpcegar/: __init__.py
dpcegar/cegar/: __init__.py  abstraction.py  engine.py  orchestrator.py  refinement.py
dpcegar/certificates/: __init__.py  certificate.py  proof_extractor.py  report.py
dpcegar/cli/: __init__.py  config_loader.py  formatters.py  main.py
dpcegar/density/: __init__.py  composition.py  noise_models.py  privacy_loss.py  ratio_builder.py
dpcegar/ir/: __init__.py  nodes.py  serialization.py  types.py  visitors.py
dpcegar/parser/: __init__.py  ast_bridge.py  lexer.py  preprocessor.py  sensitivity.py  source_map.py  type_checker.py
dpcegar/paths/: __init__.py  enumerator.py  feasibility.py  loop_unroller.py  path_condition.py  symbolic_path.py
dpcegar/repair/: __init__.py  patcher.py  synthesizer.py  templates.py  validator.py
dpcegar/smt/: __init__.py  counterexample.py  encoding.py  optimizer.py  privacy_encoder.py  solver.py  theory_selection.py  transcendental.py
dpcegar/utils/: __init__.py  config.py  errors.py  logging.py  math_utils.py  timing.py
dpcegar/variants/: __init__.py  conversions.py  lattice.py  multi_checker.py  privacy_profile.py
examples/: __init__.py  demo_multi_variant.py  demo_repair.py  demo_verify.py  user_buggy.py  user_gaussian.py  user_laplace.py
examples/mechanisms/: __init__.py  composed_mechanism.py  exponential_mechanism.py  gaussian_mechanism.py  iterative_mechanism.py  laplace_mechanism.py  noisy_histogram.py  private_selection.py  sparse_vector.py
experiments/: results.json  run_experiments.py
logs/: auditor_assessment.md  skeptic_assessment.md  synthesis_verdict.md  synthesizer_assessment.md  verification_signoff.md
(+24 files in other folders)
