[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dp-cegar"
version = "0.1.0"
description = "Differential Privacy CEGAR Verification and Repair Engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "DP-CEGAR Team"},
]
keywords = ["differential-privacy", "verification", "CEGAR", "SMT", "repair"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Security",
    "Typing :: Typed",
]

dependencies = [
    "z3-solver>=4.12.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "sympy>=1.12",
    "click>=8.1.0",
    "rich>=13.0.0",
    "networkx>=3.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "black>=23.7.0",
    "ruff>=0.1.0",
]

[project.scripts]
dpcegar = "dpcegar.cli.main:cli"

[project.urls]
Homepage = "https://github.com/dp-cegar/dp-cegar"
Documentation = "https://dp-cegar.readthedocs.io"
Repository = "https://github.com/dp-cegar/dp-cegar"

[tool.setuptools.packages.find]
include = ["dpcegar*"]

[tool.black]
line-length = 99
target-version = ["py310"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]
